@@ -8,6 +8,7 @@
 @paragraphindent 0
 @c %**end of header
 
+@dircategory Mathematics
 @direntry
 * CLN: (cln).                       Class Library for Numbers (C++).
 @end direntry
